--- a/pages/index.html
+++ b/pages/index.html
@@ -109,7 +109,7 @@
           <div class="section-title">
             <h2>Sobre</h2>
             <p>
-              sou Luke Milk, desenvolvedor entusiasta em Front-end. Adoro desafios e
+              Sou Luke Milk, desenvolvedor entusiasta em Front-end. Adoro desafios e
               acredito na transformação do mundo com o poder da informação. Sinta-se Bem-vindo(a)
             </p>
           </div>
