--- a/pages/index.html
+++ b/pages/index.html
@@ -26,32 +26,71 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
-</head>
+    <HTML>
 
-<body>
-    <!-- ======= Mobile nav toggle button ======= -->
-    <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+    <HEAD>
 
-    <!-- ======= Header ======= -->
-    <header id="header">
-        <div class="d-flex flex-column">
-            <div class="profile">
-                <img src="assets/img/perfil.jpg" alt="" class="img-fluid rounded-circle" />
-                <h1 class="text-light"><a href="index.html">Luke Milk</a></h1>
-                <div class="social-links mt-3 text-center">
-                    <a href="https://twitter.com/zjmboy" class="twitter"><i class="bx bxl-twitter"></i
-            ></a>
-                    <a href="https://www.linkedin.com/in/lucas-leite-453688125/" class="linkedin"><i class="bx bxl-linkedin"></i
-            ></a>
-                    <a href="https://www.youtube.com/channel/UCr0nj9oZdRNNoFcQwLecRog" class="youtube"><i class="bx bxl-youtube"></i
-            ></a>
+        <TITLE>BOTÃO DO WHATSAPP</TITLE>
+        <style>
+            .jlzTty {
+                width: 50px;
+                height: 50px;
+                order: 2;
+                padding: 5px;
+                box-sizing: border-box;
+                border-radius: 50%;
+                cursor: pointer;
+                overflow: hidden;
+                box-shadow: rgb(0 0 0 / 40%) 2px 2px 6px;
+                transition: all 0.5s ease 0s;
+                position: relative;
+                z-index: 200;
+                display: block;
+                border: 0px;
+                background: rgb(77, 194, 71) !important;
+            }
+        </style>
+
+        <BODY BGCOLOR="FFFFFF">
+
+        </BODY>
+
+        <FOOTER>
+            <div id="gb-widget-9511" style="bottom: 21px;left: 23px;opacity: 1;transition: opacity 0.5s ease 0s;box-sizing: border-box;direction: ltr;position: fixed !important;z-index: 16000160 !important;">
+                <div><a href="https://wa.me/5595991540574" target="_blank" color="#4dc247" id="" class="q8c6tt-0 jlzTty"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 100%; height: 100%; fill: rgb(255, 255, 255); stroke: none;"><path d="M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z"></path></svg></a>
+                    <div class="q8c6tt-2 jxPOhn"></div>
                 </div>
             </div>
 
-            <nav id="navbar" class="nav-menu navbar">
-                <ul>
-                    <li>
-                        <a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a
+        </FOOTER>
+
+    </HTML>
+    </head>
+
+    <body>
+        <!-- ======= Mobile nav toggle button ======= -->
+        <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+
+        <!-- ======= Header ======= -->
+        <header id="header">
+            <div class="d-flex flex-column">
+                <div class="profile">
+                    <img src="assets/img/perfil.jpg" alt="" class="img-fluid rounded-circle" />
+                    <h1 class="text-light"><a href="index.html">Luke Milk</a></h1>
+                    <div class="social-links mt-3 text-center">
+                        <a href="https://twitter.com/zjmboy" class="twitter"><i class="bx bxl-twitter"></i
+            ></a>
+                        <a href="https://www.linkedin.com/in/lucas-leite-453688125/" class="linkedin"><i class="bx bxl-linkedin"></i
+            ></a>
+                        <a href="https://www.youtube.com/channel/UCr0nj9oZdRNNoFcQwLecRog" class="youtube"><i class="bx bxl-youtube"></i
+            ></a>
+                    </div>
+                </div>
+
+                <nav id="navbar" class="nav-menu navbar">
+                    <ul>
+                        <li>
+                            <a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a
               >
             </li>
             <li>
@@ -351,12 +390,39 @@
                                 <p>+55 95 99154-0574</p>
                             </div>
 
-                            <iframe src="https://www.google.com.br/maps/place/Boa+Vista,+RR/@2.8072842,-60.731581,13z/data=!3m1!4b1!4m13!1m7!3m6!1s0x8d930671dfccf45b:0x695f00f29e9c7a14!2sRoraima!3b1!8m2!3d1.5957682!4d-60.5820676!3m4!1s0x8d9305cacbaaa4db:0xb72e65c7a9d75f45!8m2!3d2.819601!4d-60.6747437" frameborder="0"
-                                style="border: 0; width: 100%; height: 290px" allowfullscreen></iframe>
                         </div>
                     </div>
 
-                    <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+
+
+                      <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                          <div class="row">
+                            <div class="form-group col-md-6">
+                              <label for="name">Seu nome ou Empresa que representa</label>
+                              <input type="text" name="name" class="form-control" id="Nome ou Empresa" required>
+                            </div>
+                            <div class="form-group col-md-6">
+                              <label for="name">Seu E-mail</label>
+                              <input type="email" class="form-control" name="email" id="Email" required>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="name">Assunsto</label>
+                            <input type="text" class="form-control" name="subject" id="subject" required>
+                          </div>
+                          <div class="form-group">
+                            <label for="name">Mensagem de texto</label>
+                            <textarea class="form-control" name="message" rows="10" required></textarea>
+                          </div>
+                          <div class="my-3">
+                            <div class="loading">Carregando</div>
+                            <div class="error-message"></div>
+                            <div class="sent-message">Que legal, sua mensagem foi enviada ao Luke!</div>
+                          </div>
+                          <div class="text-center"><button type="submit">Enviar mensagem</button></div>
+                        </form>
+                      </div>
                        
                            
                         </form>
@@ -382,19 +448,19 @@
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i
     ></a>
 
-                        <!-- Vendor JS Files -->
-                        <script src="assets/vendor/aos/aos.js"></script>
-                        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-                        <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-                        <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-                        <script src="assets/vendor/php-email-form/validate.js"></script>
-                        <script src="assets/vendor/purecounter/purecounter.js"></script>
-                        <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-                        <script src="assets/vendor/typed.js/typed.min.js"></script>
-                        <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-                        <!-- Template Main JS File -->
-                        <script src="assets/js/main.js"></script>
-</body>
+                            <script src="assets/vendor/aos/aos.js"></script>
+                            <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+                            <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+                            <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+                            <script src="assets/vendor/php-email-form/validate.js"></script>
+                            <script src="assets/vendor/purecounter/purecounter.js"></script>
+                            <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+                            <script src="assets/vendor/typed.js/typed.min.js"></script>
+                            <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+
+                            <!-- Template Main JS File -->
+                            <script src="assets/js/main.js"></script>
+    </body>
 
 </html>
