--- a/pages/index.html
+++ b/pages/index.html
@@ -392,9 +392,7 @@
 
                         </div>
                     </div>
-
-
-<h3> Formulario de teste, caso queira entrar em contato, favor clicar no Botão do Whatsapp que está flutuando no final da sua tela. <h3>
+                    <span> Formulario de teste, caso queira entrar em contato, favor clicar no Botão do Whatsapp que está flutuando no final da sua tela.</span>
                       <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                           <div class="row">
