--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
     <HTML>
-        <h1> MICHELLY </h1>
+    
 
     <head>
         <style>
@@ -214,7 +214,7 @@
       <section id="skills" class="skills section-bg">
         <div class="container">
           <div class="section-title">
-            <h2>Skills</h2>
+            <h2>Skills</h2>    <h1> MICHELLY </h1>
             <p>
             Confira abaixo meus conhecimentos com as linguagens  e programas que mais utilizo:
             </p>
