--- a/pages/index.html
+++ b/pages/index.html
@@ -214,7 +214,7 @@
       <section id="skills" class="skills section-bg">
         <div class="container">
           <div class="section-title">
-            <h2>Skills</h2>    <h1> MICHELLY </h1>
+            <h2>Skills</h2>
             <p>
             Confira abaixo meus conhecimentos com as linguagens  e programas que mais utilizo:
             </p>
