--- a/pages/index.html
+++ b/pages/index.html
@@ -75,7 +75,7 @@
             <div class="d-flex flex-column">
                 <div class="profile">
                     <img src="assets/img/perfil.jpg" alt="" class="img-fluid rounded-circle" />
-                    <h1 class="text-light"><a href="index.html">Luke Milk</a></h1>
+                    <h1 class="text-light"><a href="index.html">Lucas Leite</a></h1>
                     <div class="social-links mt-3 text-center">
                         <a href="https://twitter.com/zjmboy" class="twitter"><i class="bx bxl-twitter"></i
             ></a>
@@ -128,7 +128,7 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container" data-aos="fade-in">
-        <h1>Luke Milk</h1>
+        <h1>Lucas Leite</h1>
         <p>
           Eu sou
           <span
@@ -402,7 +402,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="copyright">
-                    &copy; Copyright <strong><span>Luke Milk</span></strong>
+                    &copy; Copyright <strong><span>Lucas Leite</span></strong>
                 </div>
                 <div class="credits"></div>
             </div>
