--- a/pages/index.html
+++ b/pages/index.html
@@ -200,7 +200,7 @@
                     </li>
                        <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Github:</strong> <span>   <link href="https://github.com/devlucasleite" rel="stylesheet" /></span>
+                      <strong>Github:</strong> <span>"https://github.com/devlucasleite"></span>
                     </li>
                   </ul>
                 </div>
