--- a/pages/index.html
+++ b/pages/index.html
@@ -281,12 +281,12 @@
               </div>
 
               <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">40%</i></span>
+                <span class="skill">PHP <i class="val">10%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="40"
+                    aria-valuenow="10"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
