--- a/pages/index.html
+++ b/pages/index.html
@@ -335,7 +335,12 @@
                   Função: Estagiário Auxiliar Administrativo. 1 Ano. </br>
                      </li>
                   <li>Empresa: Conselho Regional de Engenharia e Agronomia de Roraima
-                    <br> Função: Estagiário de Suporte de TI até o presente momento </br> </li>
+                    <br> Função: Estagiário de Suporte de TI</br> </li>
+        
+        </li>
+                  <li>Empresa: Tribunal de Contas de Roraima
+                    <br> Função: Estagiário de Desenvolvimento de Sistemas</br> </li>
+        
                 </ul>
               </div>
 
